--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,7 +9,6 @@
   background-color: var(--spectrum-gray-50);
   padding: var(--spectrum-global-dimension-size-200);
   border-bottom: var(--spectrum-alias-border-size-thin) solid var(--spectrum-global-color-gray-300);
-  width: 100vw;
 }
 
 .text-header {
